<resources>
    <string name="app_name">WalletMaven</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_budgetoverview">Overview</string>
    <string name="wallet_maven_logo">Wallet Maven Logo</string>
    <string name="login">LOGIN</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="or_register_with_email">Or, Register with Email</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="add_expense">Add Expense</string>
    <string name="store_name">Store Name</string>
    <string name="price">Price</string>
    <string name="select_category">Select Category</string>
    <string name="sort_by_category">Sort by category</string>
    <string name="expense_date">Date</string>
    <string name="dark_mode">Dark Mode</string>

    <!-- Google Web Client ID -->
    <string name="default_web_client_id">848981230075-4im8mntdut32q5304pasvj82mfkibndv.apps.googleusercontent.com</string>
    <string name="add_category">Add Category</string>
    <string name="budget_limit">Budget Limit</string>
    <string name="view_reports">View Reports</string>
    <string name="currency_format">Currency Format</string>
    <string name="category_name">Category Name</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="take_picture">Take Picture</string>
    <string name="budget_information">Budget Information</string>
    <string name="loading">Loading...</string>
    <string name="default_notification_channel_id">walletmaven_channel</string>
    <string name="notification_title">WalletMaven</string>
    <string name="add">Add</string>
    <string name="select_language">Select Language</string>
    <string name="all">All</string>
    <string name="buget_limit">Budget Limit</string>
    <string name="used">Used</string>
    <string name="remaining">Remaining</string>
    <string name="none">None</string>

    <!-- Budget Categories List -->
    <string-array name="budget_categories">
        <item>Bank Fees</item>
        <item>Bills &amp; Utilities</item>
        <item>Clothing &amp; Accessories</item>
        <item>Dining Out</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Fitness &amp; Sports</item>
        <item>Gifts</item>
        <item>Groceries</item>
        <item>Health &amp; Wellness</item>
        <item>Household Supplies</item>
        <item>Insurance</item>
        <item>Internet</item>
        <item>Investments</item>
        <item>Loans</item>
        <item>Medical Expenses</item>
        <item>Mortgage/Rent</item>
        <item>Pet Care</item>
        <item>Phone</item>
        <item>Savings</item>
        <item>Shopping</item>
        <item>Streaming Services</item>
        <item>Taxes</item>
        <item>Transportation</item>
        <item>Vacation</item>
        <item>Vehicle Maintenance</item>
    </string-array>

</resources>