<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expenseCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <!-- Background ImageView -->
            <ImageView
                android:id="@+id/categoryImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/cr25bc4bfb6" />

            <!-- Category Icon Overlay -->
            <ImageView
                android:id="@+id/categoryIconView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                app:tint="@color/primaryColor" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Store Name -->
            <TextView
                android:id="@+id/storeNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Category Name -->
            <TextView
                android:id="@+id/categoryNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/category_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Expense Price -->
            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/price"
                android:textColor="@color/primaryColor"
                android:textSize="16sp" />

            <!-- Date -->
            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/expense_date"
                android:textSize="14sp" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete_expense"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/secondaryColorVariant"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
